--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <div class="shop-box pb-25px">
                           <div class="shop-image">
                             <a href="single-product.html">
-                              <img src="images/ürünler/ürün-3.jpg" alt="" />
+                              <img src="images/ürünler/gida.jpg" alt="" />
                               <div class="product-overlay bg-gradient-extra-midium-gray-transparent"></div>
                             </a>
                           </div>
@@ -326,7 +326,7 @@
                         <div class="shop-box pb-25px">
                           <div class="shop-image">
                             <a href="single-product.html">
-                              <img src="images/ürünler/ürün-4.jpg" alt="" />
+                              <img src="images/ürünler/aksesuar.jpg" alt="" />
                               <div class="product-overlay bg-gradient-extra-midium-gray-transparent"></div>
                             </a>
                           </div>
@@ -340,7 +340,7 @@
                         <div class="shop-box pb-25px">
                           <div class="shop-image">
                             <a href="single-product.html">
-                              <img src="images/ürünler/ürün-2.jpg" alt="" />
+                              <img src="images/ürünler/endüstiriyel-ürünler.jpg" alt="" />
                               <div class="product-overlay bg-gradient-extra-midium-gray-transparent"></div>
                             </a>
                           </div>
@@ -383,7 +383,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
+                              <img src="images/ürünler/ayakkabi.jpg" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
@@ -397,7 +397,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
+                              <img src="images/ürünler/lokum.jpg" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
@@ -411,7 +411,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
+                              <img src="images/ürünler/makarna.jpg" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
@@ -425,68 +425,12 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
+                              <img src="images/ürünler/canta.jpg" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                           </div>
                           <div class="shop-footer text-center">
-                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li class="grid-item">
-                        <div class="shop-box mb-10px">
-                          <div class="shop-image mb-20px">
-                            <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
-                              <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                            </a>
-                          </div>
-                          <div class="shop-footer text-center">
-                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li class="grid-item">
-                        <div class="shop-box mb-10px">
-                          <div class="shop-image mb-20px">
-                            <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
-                              <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                            </a>
-                          </div>
-                          <div class="shop-footer text-center">
-                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li class="grid-item">
-                        <div class="shop-box mb-10px">
-                          <div class="shop-image mb-20px">
-                            <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
-                              <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                            </a>
-                          </div>
-                          <div class="shop-footer text-center">
-                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li class="grid-item">
-                        <div class="shop-box mb-10px">
-                          <div class="shop-image mb-20px">
-                            <a href="single-product.html">
-                              <img src="https://lipsum.app/600x765" alt="" />
-                              <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                            </a>
-                          </div>
-                          <div class="shop-footer text-center">
-                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
+                            <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Deri Çanta</a>
                           </div>
                         </div>
                       </li>
