--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="demos/decor-store/decor-store.css" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="https://kit.fontawesome.com/ad5b8232d1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body data-mobile-nav-style="classic">
     <header class="header-with-topbar">
