--- a/shop.html
+++ b/shop.html
@@ -192,13 +192,13 @@
               <li class="grid-item">
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
-                    <a href="delight.html">
+                    <a href="#">
                       <img src="images/ürünler/lokum.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
                   <div class="shop-footer text-center">
-                    <a href="delight.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
+                    <a href="#" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
                   </div>
                 </div>
               </li>
@@ -206,13 +206,13 @@
               <li class="grid-item">
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
-                    <a href="pasta.html">
+                    <a href="#">
                       <img src="images/ürünler/makarna.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
                   <div class="shop-footer text-center">
-                    <a href="pasta.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
+                    <a href="#" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
                   </div>
                 </div>
               </li>
